@@ -2,6 +2,8 @@ package com.epam.esm.security;
 
 import com.epam.esm.entity.User;
 
+import java.util.stream.Collectors;
+
 public class SecurityUserDetailsBuilder {
 
     public static SecurityUserDetails create(User user) {
@@ -9,7 +11,8 @@ public class SecurityUserDetailsBuilder {
                 user.getId(),
                 user.getUsername(),
                 user.getPassword(),
-                user.getRole().getAuthorities().stream().toList(),
+//                user.getRole().getAuthorities().stream().toList(),
+                user.getRole().getAuthorities().stream().collect(Collectors.toList()),
                 true
         );
     }
